--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "uuid": "^8.3.2"
   },
   "bundledDependencies": [
