Move database config into config.json Add session secret to config

--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,15 @@
   "rateLimit": {
     "timeWindow": 5,
     "maxRequests": 100
+  },
+  "database": {
+    "host": "localhost",
+    "port": 3000,
+    "user": "root",
+    "password": "root",
+    "database": "simpleclass"
+  },
+  "session": {
+    "secret": "AP20b"
   }
 }
