--- a/api/package.json
+++ b/api/package.json
@@ -9,31 +9,31 @@
     "dev": "nodemon index.js localhost 3080"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Lezurex",
+  "license": "GNU GPL-3.0",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "uuid": "^8.3.2"
+    "mysql": "^2.18.1"
   },
   "bundledDependencies": [
+    "bcrypt",
     "express",
+    "express-rate-limit",
+    "express-session",
     "mysql",
-    "uuid"
+    "morgan"
   ],
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
     "nodemon": "^2.0.7",
-    "webpack": "^5.26.2",
+    "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
   }
