--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.1",
-    "bootstrap": "^5.0.0-beta2",
+    "@tailwindcss/forms": "^0.3.2",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
