--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,12 +16,14 @@
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0"
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.0.0",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
