--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "icon.place": "^1.0.3",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue": "^3.0.0",
