--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "@panter/vue-i18next": "^0.15.2",
     "@popperjs/core": "^2.9.1",
     "@tailwindcss/forms": "^0.3.2",
+    "@vue/runtime-core": "^3.0.10",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
     "icon.place": "^1.0.3",
