--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/bundle.js",
-    "build": "webpack .",
+    "start": "node index.js",
     "dev": "nodemon index.js localhost 3080"
   },
   "keywords": [],
