--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,14 +12,15 @@
     "@popperjs/core": "^2.9.2",
     "@tailwindcss/forms": "^0.3.2",
     "@vue/runtime-core": "^3.0.11",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.10.1",
     "icon.place": "^1.0.3",
     "postcss": "^8.2.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue": "^3.0.11",
     "vue-i18n": "^9.1.3",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.1.0",
