--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,11 +12,8 @@
     "@popperjs/core": "^2.9.2",
     "@tailwindcss/forms": "^0.3.2",
     "@vue/runtime-core": "^3.0.11",
-    "autoprefixer": "^9.8.6",
     "core-js": "^3.10.1",
     "icon.place": "^1.0.3",
-    "postcss": "^8.2.9",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue": "^3.0.11",
     "vue-i18n": "^9.1.3",
     "vue-router": "^4.0.6",
@@ -24,14 +21,18 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.1.0",
+    "@tailwindcss/postcss7-compat": "^2.1.0",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.11",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
   },
   "eslintConfig": {
     "root": true,
