--- a/.github/workflows/webapp-builder.yml
+++ b/.github/workflows/webapp-builder.yml
@@ -26,5 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: cd ./webapp
+    - run: pwd
+    - run: ls
     - run: npm ci
     - run: npm run build --if-present
