--- a/.github/workflows/webapp-builder.yml
+++ b/.github/workflows/webapp-builder.yml
@@ -28,5 +28,6 @@ jobs:
     - run: cd ./webapp
     - run: pwd
     - run: ls
+    - run: cd webapp
     - run: npm ci
     - run: npm run build --if-present
