--- a/.github/workflows/webapp-builder.yml
+++ b/.github/workflows/webapp-builder.yml
@@ -21,13 +21,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - working-directory: ./webapp
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd ./webapp
-    - run: pwd
-    - run: ls
-    - run: cd webapp
     - run: npm ci
     - run: npm run build --if-present
