--- a/.github/workflows/webapp-builder.yml
+++ b/.github/workflows/webapp-builder.yml
@@ -21,10 +21,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - working-directory: ./webapp
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
+    - name: Install and build
+      working-directory: ./webapp
+      run: | 
+          npm ci
+          npm run build --if-present
