--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,7 +32,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+    "typescript": "^4.2.4"
   },
   "eslintConfig": {
     "root": true,
