--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.14.0",
     "babel-loader": "^8.2.2",
     "nodemon": "^2.0.7",
+    "typescript": "^4.2.4",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
     "webpack-node-externals": "^3.0.0"
