--- a/api/package.json
+++ b/api/package.json
@@ -2,15 +2,16 @@
   "name": "openclass-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js localhost 3080"
+    "start": "node index.ts",
+    "dev": "nodemon index.ts localhost 3080"
   },
   "keywords": [],
   "author": "Lezurex",
   "license": "GNU GPL-3.0",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -28,6 +29,8 @@
     "morgan"
   ],
   "devDependencies": {
+    "@types/express-rate-limit": "^5.1.1",
+    "@types/mysql": "^2.15.18",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
